--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "jest": "26.6.3",
     "msw": "0.35.0",
     "nodemon": "2.0.12",
-    "webpack": "5.53.0",
+    "webpack": "^5.62.1",
     "webpack-cli": "4.8.0",
     "webpack-dev-server": "4.2.1"
   },
